<resources>
    <string name="app_name">SalesApp</string>
    <string name="sales_icon">Sales</string>
    <string name="about_us">Про нас</string>
    <string name="coming_soon">Сравнение</string>
    <string name="coming_soon_h1">Сравнение</string>
    <string name="coming_soon_text">Данная страница пока что не доступна!</string>
    <string name="main_scene">Главная</string>
    <string name="head">Некоторые магазины было вылучено из-за полномаштабного вторжения росии в Украину! Слава Украине! Слава ЗСУ❤</string>
    <string name="head2">C возращением в SalesApp!</string>
    <string name="h2">Фильтр:</string>
    <string name="h3"> Магазины нашего приложения</string>
    <string name="shop_cat">Магазин:</string>
    <string name="shop_work">Время работы:</string>
    <string name="shop_site">Официальный сайт:</string>
    <string name="h2.1">Про</string>
    <string name="h2.2">Hac</string>
    <string name="item_price1">Цена до скидки:</string>
    <string name="item_price2">Цена со скидкой:</string>
    <string name="cart_h1">Cart</string>
    <string name="cart_h2">Page</string>
    <string name="filter1">Фильтр не выбран!</string>

    <string name="buy">Заказать на сайте</string>

    <string name="clothes_f">Одежда</string>
    <string name="tech_f">Техника</string>
    <string name="all_f">Всё</string>
    <string name="sport_f">Разное</string>
    <string name="products_f">Продукты</string>

    <string name="clothes_f2">Отфильтровано: \"Одежда\"</string>
    <string name="tech_f2">Отфильтровано: \"Техника\"</string>
    <string name="all_f2">\"Всё\"</string>
    <string name="sport_f2">Отфильтровано: \"Разное\"</string>
    <string name="products_f2">Отфильтровано: \"Продукты\"</string>

    <string name="clothes_f3">Отфильтрованые магазины, одежда</string>
    <string name="tech_f3">Отфильтрованые магазины, техника</string>
    <string name="all_f3">Все магазины из нашего приложения</string>
    <string name="sport_f3">Отфильтрованые магазины, разное</string>
    <string name="products_f3">Отфильтрованые магазины, продуты</string>

    <string name="wait">Ожидайте, идет поиск скидок! ;)</string>
    <string name="language">Ukrainian</string>

    <string name="cart_price">Только сейчас:</string>
    <string name="cart_items_list" translatable="false">Товаровы из этого магазина добавленые в список желаемого</string>
    <string name="shop_cat1" translatable="false">Товаровы в корзине</string>
    <string name="error">Отсутствует подключение к сети!</string>
    <string name="error1">Перейти в настройки сети</string>
    <string name="error2">Выйти из приложения</string>
    <string name="main_text">Все магазины из нашего приложения</string>
    <string name="main_text2">Фильтр:</string>
    <string name="main_text3">Отсутствует</string>
    <string name="description">
        Мы команда разроботчиков Sector Java. Если вы захотели узнать про нас подробнее, присаживайтесь мы начинаем!</string>
    <string name="description2.2">
        Приложение Sales App предназначено для поиска актуальных акций в списке самых популярных магазинов в нашей стране.
</string>
    <string name="description2.3">
В приложении вы можете найти магазин с нужным вам товаром. Помимо этого, вы можете перейти на сайт товара и изучить его более подробно.
    </string>
    <string name="description3.1">
     Sector Java также создала другой масштабный проект – Дискорд Боты.</string>
    <string name="description3.2">  «Ботинки» представляют собой админ-помощников на платформе Дискорд. </string>
    <string name="description3.3">
       Они были созданы для помощи проведения уроков и дружеских встреч, во время пандемии.
    </string>


    <string name="intro1.1">Скидки на товары, разных категорий, которыми ты интересуешься…</string>
    <string name="intro2.1">Множество выгодных предложений</string>
    <string name="intro2.2">нужный тебе товар</string>
    <string name="intro2.3">Посети страницу этого товара в нашем преложении, а затем закажи его на сайте…</string>


    <string name="intro4_1">ПОКУПАЙ</string>
    <string name="intro4_2">или получай свой товар</string>
    <string name="intro4_3">И не забывай заходить в наше приложение почаще!❤😉</string>
    <string name="intro2_2_1">Большое количество магазинов</string>
    <string name="intro2_2_2">все выгодные предложения в вашем регионе</string>
    <string name="intro2_2_3">Доступ к огромному количеству разных магазинов не выходя из приложения…</string>
    <string name="loading">Загрузка…</string>
    <string name="start">"Начать "</string>
    <string name="error_comment">Заполните поле!</string>
    <string name="comment_success">Сообщение успешно отправлено!</string>
    <string name="welcome_message">С возвращением,</string>
    <string name="welcome_note_message">Приветствуем вновь!</string>
    <string name="hello_n_message">Добро пожаловать в SalesApp </string>
    <string name="hello_again_n_message">С возвращением в SalesApp </string>
    <string name="success_message">Ваше сообщение успешно отправлено!</string>
    <string name="menu_home">Домой</string>
    <string name="menu_about_us">O нас</string>
    <string name="menu_set">Настройки</string>
    <string name="menu_feed">Избранное</string>
    <string name="menu_gith">GitHub</string>
    <string name="menu_mail">EMail</string>
    <string name="menu_inst">Instagram</string>
    <string name="menu_phn">Номер телефона</string>
    <string name="all_information">Все пункты:</string>
    <string name="contact_0">Связаться с Александром:</string>
    <string name="contact_1">Связаться с Максимом:</string>
    <string name="fv" translatable="false">Избранные магазины</string>
    <string name="fav_descr" translatable="false">Магазины которые вы посчитали наиболие интересными будут находиться в этом списке.</string>
    <string name="support_ukraine">Помоги Украине!</string>
    <string name="support_ukraine_text">Вторжение росии в Украину убило десятки тысяч мирных жителей, еще больше было изнасиловано или подвергнуто пыткам.
        Число погибших продолжает расти. Это геноцид. Нам нужна ваша помощь. Давайте дадим отпор русскому режиму.\n<i><b>Кликай на бенер ниже!</b></i></string>

    <string name="settings_h">Настройки:</string>
    <string name="settings_text0">Язык приложения:</string>
    <string name="spinner0">Выбери язык</string>
    <string name="spinner1">Украинский</string>
    <string name="spinner2">Английский</string>
    <string name="spinner3">Сивино-собачий</string>

    <string name="prof">Розроботчик програмного обезпечения</string>
    <string name="name0">Максим Кравченко</string>
    <string name="name1">Александр Смугляков</string>
    <string name="about_us_title">Создатели приложения</string>

</resources>