<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/all_information">
        <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/home1"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/info"
                    android:title="@string/menu_about_us" />
            <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_set" />
        </menu>
    </item>
    <item android:title="@string/contact_0">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_inst0"
                    android:icon="@drawable/instlogo"
                    android:title="@string/menu_inst" />
                <item
                    android:id="@+id/nav_git0"
                    android:icon="@drawable/fui_ic_github_white_24dp"
                    android:title="@string/menu_gith" />

                <item
                    android:id="@+id/nav_mail0"
                    android:icon="@drawable/ic_email"
                    android:title="@string/menu_mail" />
                <item
                    android:id="@+id/nav_phn0"
                    android:icon="@drawable/ic_phone_msg"
                    android:title="@string/menu_phn" />

            </group>
        </menu>
    </item>
    <item android:title="@string/contact_1">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_inst1"
                    android:icon="@drawable/instlogo"
                    android:title="@string/menu_inst" />
                <item
                    android:id="@+id/nav_git1"
                    android:icon="@drawable/fui_ic_github_white_24dp"
                    android:title="@string/menu_gith" />
                <item
                    android:id="@+id/nav_mail1"
                    android:icon="@drawable/ic_email"
                    android:title="@string/menu_mail" />
                <item
                    android:id="@+id/nav_phn1"
                    android:icon="@drawable/ic_phone_msg"
                    android:title="@string/menu_phn" />

            </group>
        </menu>
    </item>

</menu>